# LDSO

./: CMakeLists.txt  NewCollege_Mono_calib.txt~  install_dependencies.sh
examples/: .noloop  CMakeLists.txt  DatasetReader.h  DatasetReader.h~  Run_NewCollege.py  Run_NewCollege_nonROS.py  run_dso_newcollege.cc  run_dso_newcollege.cc.orig  run_dso_newcollege.cc~
examples/NewCollege/: NewCollege_Mono_calib.txt
include/: Settings.h  Settings.h~
include/frontend/: FullSystem.h~
src/frontend/: FullSystem.cc  LoopClosing.cc
